# trafapy

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  MANIFEST.in  NEWS.md  README.md  pyproject.toml  pytest.ini  setup.py
LICENSES/: README.md  pandas-LICENSE.md
tests/: README.md  conftest.py  run_tests.py  test_batching.py  test_convenience.py  test_my_functionality.py  test_rate_limiting.py  test_real_api.py  test_trafapy.py
trafapy/: __init__.py  cache_utils.py  client.py
tutorials/: TUTORIAL.md
