[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trafapy"
version = "1.0.0"
authors = [
    {name = "Emanuel Raptis", email = "emanuelraptis@gmail.com"},
]
description = "A Python wrapper for the Trafikanalys API"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["trafikanalys", "api", "statistics", "sweden", "transport", "traffic"]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://github.com/xemarap/trafapy"
Documentation = "https://github.com/xemarap/trafapy/blob/main/README.md"
Repository = "https://github.com/xemarap/trafapy"
"Bug Tracker" = "https://github.com/xemarap/trafapy/issues"

[tool.setuptools]
license-files = ["LICENSE.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trafapy*"]
exclude = ["tests*"]